# These files will end up in the install include directory
# For example, /usr/include
include_HEADERS = LuaFunction.hpp \
LuaLightUserData.hpp \
LuaNil.hpp \
LuaNumber.hpp \
LuaReference.hpp \
LuaState.hpp \
LuaString.hpp \
LuaTable.hpp \
LuaUserData.hpp \
LuaValue.hpp \
Tokenizer.hpp \
LuaBoolean.hpp
