# These files will end up in the install include directory
# For example, /usr/include
include_HEADERS = LuaCppZ/LuaFunction.hpp \
LuaCppZ/LuaBoolean.hpp \
LuaCppZ/LuaLightUserData.hpp \
LuaCppZ/LuaNil.hpp \
LuaCppZ/LuaNumber.hpp \
LuaCppZ/LuaReference.hpp \
LuaCppZ/LuaState.hpp \
LuaCppZ/LuaString.hpp \
LuaCppZ/LuaTable.hpp \
LuaCppZ/LuaUserData.hpp \
LuaCppZ/LuaValue.hpp \
LuaCppZ/Tokenizer.hpp